# AerialAces-FlightSim

./: .gitignore  BUILD_AND_TEST.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LEVEL2_FIXES_NEEDED.md  LEVEL2_README.md  Project context.md  QUICKSTART.md  README.md  SETUP_COMPLETE.md  WINDOWS_BUILD.md  WINDOWS_QUICKSTART.md  build_windows.bat  build_windows.ps1  changes.md  compile_direct.bat  init-git.sh  temp_obs.txt
assets/: README.md
assets/landscape/: iceland.mtl
assets/lighthouse/: lighthouse.mtl  lighthouse.skp
assets/lighthouse/3ds/3ds/: lighthouse.3ds
assets/missle/mk82snak_3ds/: Mk82snak.3ds
assets/missle/mk82snak_lwo/: Mk 82 Snakeye.lwo  readme.txt
assets/missle/mk82snak_obj/: Mk 82 Snakeye.mtl
assets/mountains/: mountains.mtl
assets/mountains/__MACOSX/: ._mountains
assets/tree/: t1.mtl
docs/: BUILD.md  STRUCTURE.md
enc_temp_folder/151f466ed222d4f7a6293ed65a4f5e90/: Level2.cpp
src/: main.cpp
src/entities/: Collectible.cpp  Collectible.h  Enemy.cpp  Enemy.h  Missile.cpp  Missile.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h
src/game/: CoopMode.cpp  CoopMode.h  Game.cpp  Game.h  Level.h  Level1.cpp  Level1.h  Level2.cpp  Level2.h  MenuSystem.cpp  MenuSystem.h
src/physics/: Collision.cpp  Collision.h
src/rendering/: Camera.cpp  Camera.h  Lighting.cpp  Lighting.h  Model.cpp  Model.h  Texture.cpp  Texture.h  stb_image.h  tiny_obj_loader.h
src/utils/: Input.cpp  Input.h  Timer.cpp  Timer.h
